syntax = "proto3";

package gateway;

// The internal representation of a request, used for transport within the system.
message InternalRequest {
  // A unique identifier for the request, generated by the gateway.
  string request_id = 1;

  // The identifier of the agent submitting the request.
  string agent_id = 2;

  // The actual data payload. Its format is application-specific.
  bytes payload = 3;

  // Optional metadata for routing, prioritization, etc.
  map<string, string> metadata = 4;
}

// The response from the gateway after accepting a request.
message SubmitRequestResponse {
  // The unique identifier of the accepted request.
  string request_id = 1;

  // A status message indicating the request was accepted.
  string status = 2;
}

// The Gateway service definition.
service GatewayService {
  // Submits a request to the system.
  rpc SubmitRequest(InternalRequest) returns (SubmitRequestResponse);
}
